--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,7 +101,7 @@
       <img src="" alt="" class="portfolio__img">
    </a>
 
-    <!---Project 03----> 
+      <!---Project 03----> 
     <a href="#" class="portfolio__item">
       <img src="" alt="" class="portfolio__img">
    </a>
@@ -109,6 +109,12 @@
    </div>
  </section>
   
+ <!---Footer---->
+ <a href="mailto:s-sadaqatali@outlook.com" class="footer__link">s-sadaqatali@outlook.com</a>
+ <ul class="social-list">
+   <li class="social-list__item"><a class="social-list__link"></a></li>
+ </ul>
+
 </body>
 </html>
 
