--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,9 @@
  <!---Footer---->
  <a href="mailto:s-sadaqatali@outlook.com" class="footer__link">s-sadaqatali@outlook.com</a>
  <ul class="social-list">
-   <li class="social-list__item"><a class="social-list__link"></a></li>
+   <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/sadaqat-ali-dev/">a</a></li>
+   <li class="social-list__item"><a class="social-list__link" href="https://github.com/DevSadaqat">b</a></li>
+   <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/sadaqat-ali-dev/">c</a></li>
  </ul>
 
 </body>
