--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,10 @@
 <!--- Introduction---->
  <section class="intro" id="home">
     <h1 class="section__title section__title--intro">
-       Hi there, <strong>I'm Sadaqat Ali</strong> 
+       Hi there, I'm <strong>Sadaqat Ali</strong> 
     </h1>
     <p class="section__subtitle section__subtitle--intro">Software Developer</p>
-    <img src="assets/images/Profile.jpeg" alt="a picture of sadaqat ali">
+    <img  class= " intro__img" src="assets/images/Profile.jpeg" alt="a picture of sadaqat ali">
  </section>
 
  <!--- My Services---->
@@ -67,15 +67,15 @@
     </div>
 
     </div>
-
-    <a href="#work" class="btn">My Work</a>
+<!-- 
+   <a href="#work" class="btn">My Work</a> -->
 
  </section>
 
  <!--- About Me---->
  <section class="about me" id="about">
     <h2 class="section__title section__title--about">Who I am</h2>
-    <p class="section__subtitle section__subtitle--about"></p>
+    <p class="section__subtitle section__subtitle--about">Software Developer based in Canberra</p>
 
     <div class="about-me__body">
       <p></p>
